--- a/src/bibliografia.bib
+++ b/src/bibliografia.bib
@@ -1,5 +1,5 @@
 % Bibliografia per "Il sogno radicale - Autobiografia di un eretico"
-@book{agamben2008che,
+@book{agamben08,
   title={Che cos'{\`e} il contemporaneo?},
   author={Agamben, G.},
   series={I sassi},
@@ -7,7 +7,7 @@
   publisher={Nottetempo}
 }
 
-@book{agamben2017,
+@book{agamben17,
     author = {Agamben, Giorgio},
     title = {Creazione e anarchia},
     subtitle = {L'opera nell'età della religione capitalista},
@@ -19,7 +19,7 @@
     isbn = {978-88-5451-560-4}
 }
 
-@book{agamben2019,
+@book{agamben19,
     author = {Agamben, Giorgio},
     title = {Il tempo del pensiero},
     publisher = {Nottetempo},
@@ -138,6 +138,17 @@
   title  = {Che cos'è uno strumento},
   year   = {2023},
   url    = {https://youtu.be/CoSVrkYYo3w},
+}
+
+@online{netti24,
+    author    = {{Casa Ricordi}},
+    title     = {Giorgio Netti a Casa Ricordi},
+    year      = {2024},
+    month     = {12},
+    url       = {https://www.ricordi.com/it-IT/News/2024/12/Giorgio-Netti-new-signing.aspx},
+    urldate   = {2025-09-05},
+    language  = {italian},
+    note      = {Annuncio della collaborazione tra Casa Ricordi e il compositore Giorgio Netti}
 }
 
 @book{ronchi2001,
