--- a/src/v03/come-un-allpass/2025-08-31-come-un-allpass-impaginato.tex
+++ b/src/v03/come-un-allpass/2025-08-31-come-un-allpass-impaginato.tex
@@ -9,6 +9,7 @@
 \DeclareFieldFormat{urldate}{\mkbibparens{#1}}
 
 \usepackage{../../../lib/apf}
+\newfontfamily\phonfont{Charis} % font ricco di simboli IPA
 
 % Packages per figure e grafici
 \usepackage{pgfplots}
@@ -43,7 +44,7 @@
 
 \maketitle
 
-\include{2025-08-31-come-un-allpass}
+\input{2025-08-31-come-un-allpass_2.tex}
 
 \clearpage
 
