--- a/src/v03/come-un-allpass/2025-08-31-come-un-allpass_2.tex
+++ b/src/v03/come-un-allpass/2025-08-31-come-un-allpass_2.tex
@@ -1,3 +1,156 @@
+C'è una sola parola d'ordine per comprendere, decifrare le motivazioni, ciò che
+mette in movimento questo tentativo di assedio attorno all'esperienza musicale,
+questa ossessione per i legami tra «parole alate», per i ponti tra processi
+differenti che d'istinto vivo come un labirinto donato da antichissime umanità e
+che, semplicemente, chiamo musica: \emph{risonanza}. «Se c’è una parola che ne
+indichi la poetica è risonanza.» \cite{netti24}
+
+\begin{quote}
+  \begin{sf}
+    \small
+    Il presente, l'\emph{Anwesend}, deve avermi già rivolto la parola nel suo
+    essere presente. \cite{agamben19}
+  \end{sf}
+\end{quote}
+
+Cosa di me risuona a questo presente? Che parte del mio me risuona? Dove risuona?
+Che cos'è questa risonanza se non un ri-sentire, un aver risentito fisicamente
+dell'impronta del presente e anche un aver ri-sentito altrove ciò che ormai non
+è più, perché passato? Tra-passato da ciò che si sta eternamente allontanando da
+me io ri-suono. \cite{ronchi2001}
+
+{\phonfont su̯en-}\footnote{Pokorny IEW 1046-47: to sound, resound.} $ \rightarrow $
+suono $ \rightarrow $ \emph{ri-}, di nuovo, \emph{-suono}, suono di nuovo. È
+ciò che oggi mi mette in risonanza con l'età del rame: {\phonfont su̯en-} la radicalità
+della risonanza in quattro lettere in altrettanti migliaia di anni.
+
+I perché come e dove sono le attitudini po-etiche di cui scrive Netti \cite{netti24}
+sono le leve che predispongono l'intuizione che muove.
+
+Su \emph{resonantia} c'è poco da aggiungere: \emph{re-} (indietro, di nuovo,
+ancora una volta), di nuovo suono in \emph{resonant} che con \emph{-ia} forma
+un nome astratto. La risonanza è un nome astratto. È un nome “tratto via”,
+“separato da”, \emph{abstractus} da cosa?
+
+Risolvere questi enigmi richiede una pratica della risonanza. Una teoria della
+risonanza può aiutare a venirne fuori, a «far luce» \cite{ronchi2001} sulla
+faccenda. Una po-etica della risonanza così come la intende Netti\footnote{
+  Ho avuto il dono della risonanza da Giorgio Netti nel 2016. Quando decisi di
+  studiare la risonanza attraverso lo studio del riverbero era ormai il 2018.
+  Era solo il primo colpo tornato in dietro.
+} \cite{netti24}
+è una necessità.
+
+Quando quel risuonare è stabilito con rapporti molti a molti lo chiamiamo
+\emph{riverbero}\footnote{
+  Riverbero deriva direttamente dal latino classico \emph{reverberāre}, composto
+  dal prefisso \emph{re-} ("indietro, di nuovo") e \emph{verberāre} ("battere,
+  colpire"). La radice \emph{verberāre} deriva da \emph{verber, verberis} ("frusta,
+  sferza, colpo"), collegandosi infine alla radice protoindoeuropea \emph{wer-}
+  che significa "girare, piegare."
+
+  Il significato latino si concentrava su "ripercuotere" - colpire indietro o
+  causare un rimbalzo - tuttavia, durante il Rinascimento e il XVIII secolo,
+  emersero prominentemente applicazioni tecniche. \emph{Forni a riverbero} (forni
+  riverberatori) diventarono cruciali nella metallurgia per processare rame,
+  stagno e acciaio usando il riscaldamento radiante. Più significativi
+  culturalmente erano i \emph{riverberi pubblici} - sistemi di illuminazione
+  stradale precoce che usavano superfici riflettenti per amplificare la luce delle
+  lampade a olio, documentati nelle città italiane da Venezia (1732) a Milano
+  (1786) a Bologna (1801).
+}. Il riverbero (di cui il “ripercuotere” è l'immagine antica) è
+una parola tecnica, è l'ambiente fisico della risonanza astratta.
+
+Ma per comprendere come la risonanza si manifesti tecnicamente, dobbiamo prima chiarire cosa sia veramente un filtro - dispositivo che, come vedremo, condivide con la risonanza la necessità di un'intenzionalità progettuale.
+
+\section{che cos'è un filtro?}
+
+La scelta del termine “filtro” per dispositivi elettrici, audio e video è
+attribuibile principalmente a George Ashley Campbell dell'\emph{AT\&T}, che nel
+1915 introdusse l'espressione “electric wave-filter” nella letteratura scientifica.
+Campbell depositò il brevetto fondamentale\footnote{US Patent No. 1,227,113 - 15
+luglio 1915, rilasciato il 22 maggio 1917} descrivendo il primo “Electric
+Wave-Filter”. Nel 1922 pubblicò l'articolo seminale “Physical theory of the
+electric wave-filter” nel \emph{Bell System Technical Journal}, che definì
+teoricamente questo nuovo campo. La scelta terminologica non fu casuale:
+Campbell stava sviluppando dispositivi che permettevano la trasmissione
+attraverso un sistema di una banda di onde tra limiti definiti di frequenza e
+discriminavano nettamente frequenze fuori banda.
+
+\begin{quote}
+  \begin{sf}
+    \small
+    Any medium through which the music signal passes, whatever its form, can be
+    regarded as a filter. [\ldots] A well-known signal processing wizard is said
+    to have remarked, “When you think about it, everything is a filter.”\footnote{
+    “Introduction to Digital Filters with Audio Applications”, by Julius O.
+    Smith III, (September 2007 Edition)
+    \url{https://ccrma.stanford.edu/~jos/filters/What_Filter.html}
+    }
+  \end{sf}
+\end{quote}
+
+Ma se tutto è un filtro, allora nulla più è veramente un filtro - il concetto
+perde il suo potere discriminante. Poniamo l'attenzione all'identità matematica
+$y(t)=x(t)$. Un'identità non è un filtro: è un'identità. Un oggetto descrivibile
+con quella funzione può essere un cavo avente un'entrata e un'uscita. Tuttavia
+il circuito precedente potrebbe essere descritto con la funzione di
+trasferimento $H(\omega)=1$ per tutte le frequenze, formula che descrive anche
+un filtro \emph{AllPass}.
+
+Da un punto di vista fisico, ogni sistema reale introduce qualche alterazione,
+più che dire che tutto è filtro, in senso fisico dovremmo partire da “tutto
+modifica il segnale”. Un'identità matematica, nel mondo fisico può essere
+analizzata e descritta con la stessa matematica di un filtro, pur non essendo un
+filtro.
+
+Questa distinzione suggerisce di distinguere tra \emph{filtro} (oggetto o
+dispositivo) e \emph{filtraggio} (processo). Un cavo coassiale lungo, per
+esempio, subisce un processo di filtraggio a causa delle sue proprietà fisiche
+distribuite—resistenza, capacità e induttanza—che attenuano naturalmente le
+alte frequenze. Tuttavia il cavo non è un filtro: è stato progettato per
+trasportare il segnale il più fedelmente possibile, e l'attenuazione
+frequenziale è un effetto parassita indesiderato. Il processo di filtraggio
+può avvenire ovunque ci sia selezione frequenziale, ma il filtro come oggetto
+richiede intenzionalità progettuale.
+
+In generale la parola filtro \emph{deve funzionare} a prescindere dal campo
+fisico. Filtro deriva dal latino \emph{filtrum}, che indicava originariamente un
+pezzo di feltro (\emph{feltrum}) usato per filtrare i liquidi. Un filtro può
+avere luogo solo con una radicale intenzionalità: \emph{filtrum} implica
+intenzionalità di separazione. Anche una persona ha entrata (udito) e uscita
+(voce) e, in una discussione, filtra il discorso solo se vuole farlo. Altrimenti,
+si dice che perde parti del discorso, che dimentica cose o, al limite, che le inventa\ldots
+Quando qualcuno filtra intenzionalmente: seleziona, omette, riorganizza il
+discorso per un obiettivo; quando qualcuno altera non intenzionalmente:
+dimentica, confonde, inventa. Sono due categorie ontologicamente diverse. Nel
+secondo caso non diciamo che “filtra male” - diciamo che ha problemi di memoria,
+attenzione, o comprensione.
+
+\begin{quote}
+  \begin{sf}
+    \small
+    The different vowel sounds in speech are produced primarily by changing the
+    shape of the mouth cavity, which changes the resonances and hence the
+    filtering characteristics of the vocal tract.\footnote{
+    “Introduction to Digital Filters with Audio Applications”, by Julius O.
+    Smith III, (September 2007 Edition)
+    \url{https://ccrma.stanford.edu/~jos/filters/What_Filter.html}
+    }
+  \end{sf}
+\end{quote}
+
+La risonanza non è un filtro, tuttavia un filtro può portare alla risonanza: la
+cavità orale non “filtra” di per sé - semplicemente ha proprietà risonanti. Il
+filtraggio avviene quando il parlante modula consapevolmente quelle proprietà
+per produrre suoni specifici. È l'intenzionalità che trasforma una cavità
+risonante in un filtro vocale.
+
+Il concetto di filtro ha una dimensione teleologica essenziale: richiede
+l'intenzione di separare, selezionare, trattenere. Tutto è filtro può portare a
+un errore categoriale, confondendo causalità fisica con intenzionalità
+progettuale, svuotando così il concetto del suo significato operativo.
+
 \section{qualcosa appare a partire da se stesso: \emph{come un allpass}}
 
 \begin{quote}
@@ -25,13 +178,7 @@ una proiezione del suo doppio movimento.
   \label{tikz:ciclobase}
 \end{figure}
 
-\begin{quote}
-  \begin{sf}
-    \small
-    Il presente, l'\emph{Anwesend}, deve avermi già rivolto la parola nel suo
-    essere presente.
-  \end{sf}
-\end{quote}
+
 
 \begin{figure}[ht]
   \centering
