--- a/src/v03/sonario/2025-08-31-sonario.tex
+++ b/src/v03/sonario/2025-08-31-sonario.tex
@@ -78,6 +78,37 @@ Lo spazio agonistico \cite{ronchi2001} di questo ascoltare (\emph{theōría}) è
 uno spazio della vibrazione acustica udibile, un tempo della vibrazione, uno
 spazio dei suoni: un \concetto{sonario}.
 
+\begin{quote}
+\begin{sf}
+\small
+  Io credo che questo doppio movimento di disseminazione e di riunificazione
+  semantica sia consustanziale alle nostre lingue e che soltanto attraverso
+  questo gesto contraddirorio una parola possa realizzare il suo significato.
+  \cite{agamben17}
+  \end{sf}
+\end{quote}
+
+\apfc{sonario}{impressione}{codice}
+
+Il \emph{sonario} è il nucleo di memoria, di esperienza, in cui si rappresenta
+l'im-pressione acustica (della variazione di pressione acustica che si dissemina,
+si disperde) e la costruzione di un codice (come sforzo di riunificazione con
+la vibrazione perduta).
+
+\begin{figure}[htbp]
+\begin{center}
+\begin{tikzpicture}
+  \tikzstyle{every node}=[font=\small]
+  \ciclodiagram{sonario}{impressione}{codice}
+\end{tikzpicture}
+\caption{}
+\label{sonario}
+\end{center}
+\end{figure}
+
+
+
+ il doppio movimento tra
 %-------------------------------------------------------------------------------
 %----------------------------------------------------------------- SUB-SECTION -
 %-------------------------------------------------------------------------------
@@ -295,7 +326,7 @@ Ma l'immaginario, quando collettivo, è anche una cosa, un \emph{insieme di
 simboli e concetti presenti nella memoria} di una comunità: una memoria
 collettiva. L'\emph{insieme di rappresentazioni simboliche}.
 
-Quindi la creatività libera e contemporanea \cite{agamben2008che} del singolo
+Quindi la creatività libera e contemporanea \cite{agamben08} del singolo
 (quella possibile, immaginaria, inattuale) si stacca dall'immaginario collettivo
 che è fondamentalmente memoria, passato, passato di altri, in una forma di
 rappresentazione privata, in attesa di condivisione, in attesa forse di divenire
