--- a/src/v02/2025-08-13-ISR-02.tex
+++ b/src/v02/2025-08-13-ISR-02.tex
@@ -453,7 +453,7 @@ Ma l'immaginario, quando collettivo, è anche una cosa, un \emph{insieme di
 simboli e concetti presenti nella memoria} di una comunità: una memoria
 collettiva. L'\emph{insieme di rappresentazioni simboliche}.
 
-Quindi la creatività libera e contemporanea \cite{agamben2008che} del singolo
+Quindi la creatività libera e contemporanea \cite{agamben08} del singolo
 (quella possibile, immaginaria, inattuale) si stacca dall'immaginario collettivo
 che è fondamentalmente memoria, passato, passato di altri, in una forma di
 rappresentazione privata, in attesa di condivisione, in attesa forse di divenire
@@ -772,18 +772,18 @@ Dove ha origine – ci si chiede in queste pagine – il fascino che accompagna 
 \begin{quote}
 \begin{sf}
 \small
-L'archeologia è la ricerca di un \emph{archē}, ma il termine greco \emph{archē} ha due significati: significa tanto “origine, principio”, quanto “comando ordine”. Così, il verbo \emph{archo} significa “iniziare, essere il primo a fare qualcosa” ma significa anche “comandare, essere il capo”. Senza dimensione che l'arconte (letteralmente “colui che comincia”) era in Atene la suprema magistratura. \cite{agamben2017}
+L'archeologia è la ricerca di un \emph{archē}, ma il termine greco \emph{archē} ha due significati: significa tanto “origine, principio”, quanto “comando ordine”. Così, il verbo \emph{archo} significa “iniziare, essere il primo a fare qualcosa” ma significa anche “comandare, essere il capo”. Senza dimensione che l'arconte (letteralmente “colui che comincia”) era in Atene la suprema magistratura. \cite{agamben17}
 \end{sf}
 \end{quote}
 
 \emph{En archei}, in principio, nel comando, «cioè nella forma di un comando», «l'inizio è sempre anche il principio che governa e comanda».
 
-Archeologia del fascino che accompagna l'apparizione. Qualcosa appare e nell'apparire ammalia. Qualcosa appare e nell'apparire si lega insieme all'apparizione, come una fase che vincola e attrae irresistibilmente. L'archeologia del fascino mantiene l'idea di un potere che opera al di là della volontà razionale, \emph{en archei}, il potere di un comando. «Qualcosa appare a partire da se stesso» \cite{agamben2019} Apparire, mostrarsi, divenire visibile a partire da se stesso. È un \emph{ad – parēre}, un movimento verso.
+Archeologia del fascino che accompagna l'apparizione. Qualcosa appare e nell'apparire ammalia. Qualcosa appare e nell'apparire si lega insieme all'apparizione, come una fase che vincola e attrae irresistibilmente. L'archeologia del fascino mantiene l'idea di un potere che opera al di là della volontà razionale, \emph{en archei}, il potere di un comando. «Qualcosa appare a partire da se stesso» \cite{agamben19} Apparire, mostrarsi, divenire visibile a partire da se stesso. È un \emph{ad – parēre}, un movimento verso.
 
 \begin{quote}
 \begin{sf}
 \small
-Il presente, l'\emph{Anwesend}, deve avermi già rivolto la parola nel suo essere presente. \cite{agamben2019}
+Il presente, l'\emph{Anwesend}, deve avermi già rivolto la parola nel suo essere presente. \cite{agamben19}
 \end{sf}
 \end{quote}
 
@@ -1081,7 +1081,7 @@ Così come un filtro \emph{AllPass} preserva le energie di un segnale alterandon
 
 Ogni formalizzazione dell'esperienza musicale si confronta con questioni epistemologiche fondamentali: \textit{è possibile sviluppare modelli formali che non riducano l'esperienza musicale a combinazioni di parametri fisici? Si può preservare senso in una notazione formale estremamente concisa? Come trasformano, gli strumenti scientifici, la nostra comprensione dei processi creativi?} Il paradigma \emph{AllPass} dimostra che l'opposizione percepita tra analisi scientifica e intuizione artistica si dissolve quando entrambe operano all'interno di domini temporali condivisi.
 
-Questa teoria ha origini nello studio dell'\apf{esperienza}{materia}{memoria} (\cite{bergson1896} - fig. \ref{esperienza}) come elemento necessario e fondante di un pensiero musicale, il cui grado di libertà è in funzione della \apf{creatività}{potenza}{potenza-di-non} (\cite{agamben2017}) e la parola è agente performativo dello stupore (\cite{ronchi2001}); questi termini \emph{operano} in funzioni attive e l'isomorfismo del modello \emph{AllPass} consente di mettere in relazione sensi opposti, preservando l'energia dell'informazione e modificandone il comportamento temporale. La cibernetica di secondo ordine (\cite{vonfoerster1981}) fornisce il quadro epistemologico per questo approccio.
+Questa teoria ha origini nello studio dell'\apf{esperienza}{materia}{memoria} (\cite{bergson1896} - fig. \ref{esperienza}) come elemento necessario e fondante di un pensiero musicale, il cui grado di libertà è in funzione della \apf{creatività}{potenza}{potenza-di-non} (\cite{agamben17}) e la parola è agente performativo dello stupore (\cite{ronchi2001}); questi termini \emph{operano} in funzioni attive e l'isomorfismo del modello \emph{AllPass} consente di mettere in relazione sensi opposti, preservando l'energia dell'informazione e modificandone il comportamento temporale. La cibernetica di secondo ordine (\cite{vonfoerster1981}) fornisce il quadro epistemologico per questo approccio.
 
 La metodologia opera attraverso quattro livelli correlati che emergono dal processo:
 \begin{enumerate}[nosep]
