--- a/src/bibliografia.bib
+++ b/src/bibliografia.bib
@@ -29,6 +29,21 @@
     isbn = {978-88-7452-912-7}
 }
 
+@book{bakhtin84,
+  author     = {Mikhail Bakhtin},
+  title      = {Problems of Dostoevsky's Poetics},
+  editor     = {Caryl Emerson},
+  translator = {Caryl Emerson},
+  publisher  = {University of Minnesota Press},
+  address    = {Minneapolis},
+  year       = {1984},
+  series     = {Theory and History of Literature},
+  volume     = {8},
+  pages      = {xliii + 333},
+  isbn       = {9780816612277},
+  note       = {Traduzione di: Problemy poėtiki Dostoevskogo}
+}
+
 @book{bergson1896,
   author = {Henri Bergson},
   title = {Materia e memoria. Saggio sulla relazione tra il corpo e lo spirito},
@@ -36,6 +51,26 @@
   publisher = {Laterza},
   address = {Roma-Bari},
   note = {Ed. originale: Matière et mémoire, 1896}
+}
+
+@book{blanchot82,
+  author     = {Maurice Blanchot},
+  title      = {The Space of Literature: A Translation of "L'Espace littéraire"},
+  translator = {Ann Smock},
+  publisher  = {University of Nebraska Press},
+  address    = {Lincoln},
+  year       = {1982},
+  note       = {Originale: \emph{L'Espace littéraire}. Paris: Éditions Gallimard, 1955}
+}
+
+@book{engelberg01,
+  author    = {Edward Engelberg},
+  title     = {Solitude and Its Ambiguities in Modernist Fiction},
+  publisher = {Palgrave},
+  address   = {New York},
+  year      = {2001},
+  pages     = {223},
+  isbn      = {9780312239473}
 }
 
 @book{jlb:finzioni,
@@ -131,6 +166,17 @@
     year = {1991},
     address = {Milano},
     pages = {286}
+}
+
+@incollection{mcluhan87,
+  author    = {Marshall McLuhan},
+  title     = {Letter on Menippean Satire},
+  booktitle = {The Letters of Marshall McLuhan},
+  editor    = {Matie Molinaro and Corinne McLuhan and William Toye},
+  publisher = {Oxford University Press},
+  address   = {Toronto},
+  year      = {1987},
+  pages     = {517}
 }
 
 @Misc{netti23,
