--- a/src/v03/botteghe-di-suono/2025-09-10-botteghe-di-suono.tex
+++ b/src/v03/botteghe-di-suono/2025-09-10-botteghe-di-suono.tex
@@ -37,35 +37,37 @@ di realtà. L'esplorazione umana è mossa dalla volontà di decodifica di enigmi
 la realtà del mondo necessità volontà di soluzione, che poi chiamiamo verità,
 verità supposte\ldots
 
-L'uso di \emph{X.} per l'io autobiografico rivela un tratto fondamentale: nel
-momento stesso in cui l'artista cerca di catturare la propria esperienza
+%L'uso di \emph{X.} per l'io autobiografico rivela un tratto fondamentale: nel
+Nel momento stesso in cui l'artista cerca di catturare la propria esperienza
 attraverso la scrittura, diventa \emph{altro} da sé. \emph{X.} non è
 semplicemente un espediente stilistico, ma l'incarnazione di quello che Blanchot \cite{fare_ref}
 chiama «il neutro» — quella dimensione anonima in cui l'autore si dissolve
 nell'atto stesso della creazione. \emph{X.} materializza questa dismissione:
 l'io più intimo diventa l'incognita più radicale perché la scrittura trasforma
 il soggetto scrivente in oggetto scritto. \emph{X.} come \emph{chi} (χ), “cosa
-sconosciuta”, rivela come l'atto autobiografico, anziché rivelare il sé, ne
-sveli l'irraggiungibilità. Bertoncini non racconta di sé attraverso \emph{X.},
-ma piuttosto \emph{diventa X.}.
+sconosciuta”, mostra come l'atto autobiografico, anziché rivelare il sé, ne
+sveli l'irraggiungibilità. 
+
+%Bertoncini non racconta di sé attraverso \emph{X.}, ma piuttosto \emph{diventa X.}.
 
 %-------------------------------------------------------------------------------
 \section*{fascino}
 %-------------------------------------------------------------------------------
-
 
 \begin{quote}
   \begin{sf}
     \small
     \begin{description}
       \item[Bremonte:] %Non è esatto.
-      Un impulso determinante per il mio amico – quasi traumatico, a detta sua! –
+      Un impulso determinante per il mio amico – quasi traumatico, a detta sua!
     \end{description}
   \end{sf}
 \end{quote}
 
-È necessario articolare quella dimensione dell'esperienza poetica che eccede la
-comprensione concettuale e determina una trasformazione del soggetto.
+Traumatico è ciò che irrompe nell'ordinario flusso dell'esperienza, creando una discontinuità che il soggetto non riesce immediatamente a integrare. E un evento che eccede la capacità di elaborazione simbolica, lasciando una sorta di "corpo estraneo" nell'economia psichica. Il ferire è un penetrare, l'attraversare, spezzando, una superficie continua. 
+
+Verbalizzare la ferita, significa verbalizzare quella dimensione dell'esperienza poetica che fora, penetra la
+comprensione concettuale e determina una trasformazione del soggetto. 
 
 «Perché il fascino?» si chiede Blanchot? \cite{blanchot82}
 
