--- a/src/v03/botteghe-di-suono/2025-09-10-botteghe-di-suono.tex
+++ b/src/v03/botteghe-di-suono/2025-09-10-botteghe-di-suono.tex
@@ -46,7 +46,7 @@ nell'atto stesso della creazione. \emph{X.} materializza questa dismissione:
 l'io più intimo diventa l'incognita più radicale perché la scrittura trasforma
 il soggetto scrivente in oggetto scritto. \emph{X.} come \emph{chi} (χ), “cosa
 sconosciuta”, mostra come l'atto autobiografico, anziché rivelare il sé, ne
-sveli l'irraggiungibilità. 
+sveli l'irraggiungibilità.
 
 %Bertoncini non racconta di sé attraverso \emph{X.}, ma piuttosto \emph{diventa X.}.
 
@@ -64,10 +64,10 @@ sveli l'irraggiungibilità.
   \end{sf}
 \end{quote}
 
-Traumatico è ciò che irrompe nell'ordinario flusso dell'esperienza, creando una discontinuità che il soggetto non riesce immediatamente a integrare. E un evento che eccede la capacità di elaborazione simbolica, lasciando una sorta di "corpo estraneo" nell'economia psichica. Il ferire è un penetrare, l'attraversare, spezzando, una superficie continua. 
+Traumatico è ciò che irrompe nell'ordinario flusso dell'esperienza, creando una discontinuità che il soggetto non riesce immediatamente a integrare. E un evento che eccede la capacità di elaborazione simbolica, lasciando una sorta di "corpo estraneo" nell'economia psichica. Il ferire è un penetrare, l'attraversare, spezzando, una superficie continua.
 
 Verbalizzare la ferita, significa verbalizzare quella dimensione dell'esperienza poetica che fora, penetra la
-comprensione concettuale e determina una trasformazione del soggetto. 
+comprensione concettuale e determina una trasformazione del soggetto.
 
 «Perché il fascino?» si chiede Blanchot? \cite{blanchot82}
 
@@ -276,30 +276,30 @@ forma nel contenuto del lettore destinatario.
   \end{sf}
 \end{quote}
 
-\subsection*{appunti da wikipedia}
-
-La campana, 1423: Un Duca vuol far realizzare una grande campana, ma tutti i fonditori di campane sono morti per via della peste. Boriska (Nikolaj Burljaev), il figlio di uno di questi, convince gli uomini del duca di essere a conoscenza del segreto della fusione delle campane, confidatogli dal padre prima della morte. Il compito viene affidato al ragazzo, che dirige i lavori con severità e determinazione. Alla preparazione della campana assiste anche Andrej Rublëv. Il buffone che anni fa era stato arrestato riconosce Andrej e minaccia di ucciderlo perché pensa che sia stato lui a denunciarlo in quell'occasione. Kirill riesce a calmare il buffone, e poi confida ad Andrej di essere stato lui anni prima a denunciare il buffone e lo rimprovera di non usare il talento che Dio gli ha dato, nonostante molti gli chiedano di dipingere. Il giorno dell'inaugurazione della campana Boriska è estremamente teso e inquieto. È presente tutta la popolazione e molti nobili e la campana suona perfettamente. Quando tutti se ne sono andati Boriska piange disperato. Andrej gli si avvicina e, rompendo il voto di silenzio, gli chiede perché piange; il ragazzo allora gli rivela che suo padre non gli ha mai voluto rivelare il segreto per la costruzione delle campane. Egli è riuscito nell'impresa solo grazie alla sua determinazione e alle sue capacità. Andrej allora gli propone di partire insieme: “Tu fonderai campane, io dipingerò icone”
-
-
-\subsection*{appunti da Il suono del kairos e il segreto della campana}
-Più che un film su un pittore di icone, si potrebbe dire che Andrej Rublëv è, esso stesso, un'icona. L'unità è soltanto suggerita dall'andamento paratattico fatto di episodi che, proprio come i dettagli di un'immagine sacra, derivano le dimensioni dal valore che è loro attribuito, anziché da una forzatura prospettica. Nel continuo entrare e uscire dallo sguardo dei personaggi, il momento in cui la campana inizia a suonare risulta  un punto decisivo.
-
-Anche se nella Russia sovietica quella delle campane viene considerata una voce di dissenso e il suono del bronzo finisce sopraffatto da quello dell'acciaio, tutto il film, così come la vita russa della tradizione, è scandito da rintocchi. Il rintocco della campana di Boriška, però, assume un significato nettamente centrale, già dalle premesse narrative: se la campana non suona, Boriška morirà (anche perché una campana ortodossa, una volta fusa non si può più ritoccare: essendo un oggetto sacro, accordarla sarebbe una sorta di sacrilegio).
-
-Nell'ottavo capitolo si concentra il senso della creazione artistica secondo Tarkovskij. Rublëv, Tarkovskij stesso e Boriška sono tre ipostasi della medesima idea: un'arte che tragga origine dalla collettività e che a questa ritorni. Anche se il lavoro nella fucina e il picchiare dei martelli riecheggiano l'ossessione sovietica per l'industria pesante, Boriška non è affatto un eroe del lavoro. C'è una sostanziale deviazione rispetto ai  film di argomento storico sfuggiti alle forbici negli anni precedenti: secondo Tarkovskij l'artista deve farsi servo dell'assoluto e condividerne la rappresentazione, senza alcuna glorificazione finale. Teurgia a parte, la riflessione del regista si lega alla prima avanguardia, che nelle sue varie formulazioni mirava a stimolare una sorta di completamento del film da parte dello spettatore. Per indurre una reazione autentica da parte di chi osserva, per Tarkovskij bisogna prescindere dalle convenzioni stilistiche, che equivalgono a pregiudizi, proprio come avviene in Andrej Rublëv, in cui etica ed estetica si compenetrano. La specificità del mezzo cinema deve consistere in una vera e propria scultura del tempo (in un certo senso nella sua cattura fattografica all'interno dell'inquadratura), con tutte le implicazioni filosofiche che ne derivano.
-
-Si potrebbe dire che con l'avvio della campana, a sua volta metafora di un'icona, Andrej Rublëv arriva persino a simulare l'esperienza della rivelazione divina: è come se Tarkovskij proponesse, nel corso del film, una guida alla lettura delle immagini sacre poi mostrate a colori nella parte finale. Si pensi alla tensione temporale dell'inquadratura in cui il pesantissimo battaglio (in russo jazyk, 'lingua') prende ad oscillare dallo sfondo al primo piano: ricalca quasi il movimento suggerito dalla cosiddetta 'prospettiva rovesciata' delle icone teorizzata da Pavel Florenskij, in base alla quale le figure sembrano avanzare in direzione dell'osservatore. Mentre si attende la manifestazione della voce divina, immagine e suono sono ancora saldate nelle inquadrature dei lentissimi cigolii. Poi, quando la campana finalmente suona, Tarkovskij cela la fonte sonora, per spostarsi su Boriška e su Rublëv. Inevitabilmente lo stacco ha l'effetto di spezzare la prevedibilità non soltanto visiva ma anche temporale di una distanza progressivamente ridotta e di creare un nuovo senso di attesa. L'agognato e imprevedibile rintocco arriva a suggerire una trasformazione del chronos, il tempo quantitativo, in kairos, un tempo qualitativo. Per Rublëv è il tempo della rivelazione e dell'incontro con Dio.
-
-Osservando il tutto senza tener conto di suggestioni teoriche si pone una questione: non può essere una coincidenza il fatto che il frammento del film in cui si delinea una svolta spirituale sia anche quello che più si avvicina a uno schema da cinema classico. Tarkovskij scrive che il montaggio verticale è una dittatura, eppure, nella scena delle oscillazioni, in fondo il momento di massima rigidità ideologica, conserva una precisa saldatura tra suono e immagine e ricorre a una soluzione di montaggio, con una raffinata elaborazione in campo-controcampo. Magari era questo il segreto della campana.
-
-
-\subsection*{appunti bibliografici}
-
-Deleuze, Gilles, Cinema 1: The Movement-ImageLondon: Continuum, 2005a.
-
-Deleuze, Gilles, Cinema 2: The Time ImageLondon: Continuum, 2005b.
-
-Tarkovsky, Andrei, Sculpting in Time: Reflections on the CinemaLondon: University of Texas Press, 1988.
+% \subsection*{appunti da wikipedia}
+%
+% La campana, 1423: Un Duca vuol far realizzare una grande campana, ma tutti i fonditori di campane sono morti per via della peste. Boriska (Nikolaj Burljaev), il figlio di uno di questi, convince gli uomini del duca di essere a conoscenza del segreto della fusione delle campane, confidatogli dal padre prima della morte. Il compito viene affidato al ragazzo, che dirige i lavori con severità e determinazione. Alla preparazione della campana assiste anche Andrej Rublëv. Il buffone che anni fa era stato arrestato riconosce Andrej e minaccia di ucciderlo perché pensa che sia stato lui a denunciarlo in quell'occasione. Kirill riesce a calmare il buffone, e poi confida ad Andrej di essere stato lui anni prima a denunciare il buffone e lo rimprovera di non usare il talento che Dio gli ha dato, nonostante molti gli chiedano di dipingere. Il giorno dell'inaugurazione della campana Boriska è estremamente teso e inquieto. È presente tutta la popolazione e molti nobili e la campana suona perfettamente. Quando tutti se ne sono andati Boriska piange disperato. Andrej gli si avvicina e, rompendo il voto di silenzio, gli chiede perché piange; il ragazzo allora gli rivela che suo padre non gli ha mai voluto rivelare il segreto per la costruzione delle campane. Egli è riuscito nell'impresa solo grazie alla sua determinazione e alle sue capacità. Andrej allora gli propone di partire insieme: “Tu fonderai campane, io dipingerò icone”
+%
+%
+% \subsection*{appunti da Il suono del kairos e il segreto della campana}
+% Più che un film su un pittore di icone, si potrebbe dire che Andrej Rublëv è, esso stesso, un'icona. L'unità è soltanto suggerita dall'andamento paratattico fatto di episodi che, proprio come i dettagli di un'immagine sacra, derivano le dimensioni dal valore che è loro attribuito, anziché da una forzatura prospettica. Nel continuo entrare e uscire dallo sguardo dei personaggi, il momento in cui la campana inizia a suonare risulta  un punto decisivo.
+%
+% Anche se nella Russia sovietica quella delle campane viene considerata una voce di dissenso e il suono del bronzo finisce sopraffatto da quello dell'acciaio, tutto il film, così come la vita russa della tradizione, è scandito da rintocchi. Il rintocco della campana di Boriška, però, assume un significato nettamente centrale, già dalle premesse narrative: se la campana non suona, Boriška morirà (anche perché una campana ortodossa, una volta fusa non si può più ritoccare: essendo un oggetto sacro, accordarla sarebbe una sorta di sacrilegio).
+%
+% Nell'ottavo capitolo si concentra il senso della creazione artistica secondo Tarkovskij. Rublëv, Tarkovskij stesso e Boriška sono tre ipostasi della medesima idea: un'arte che tragga origine dalla collettività e che a questa ritorni. Anche se il lavoro nella fucina e il picchiare dei martelli riecheggiano l'ossessione sovietica per l'industria pesante, Boriška non è affatto un eroe del lavoro. C'è una sostanziale deviazione rispetto ai  film di argomento storico sfuggiti alle forbici negli anni precedenti: secondo Tarkovskij l'artista deve farsi servo dell'assoluto e condividerne la rappresentazione, senza alcuna glorificazione finale. Teurgia a parte, la riflessione del regista si lega alla prima avanguardia, che nelle sue varie formulazioni mirava a stimolare una sorta di completamento del film da parte dello spettatore. Per indurre una reazione autentica da parte di chi osserva, per Tarkovskij bisogna prescindere dalle convenzioni stilistiche, che equivalgono a pregiudizi, proprio come avviene in Andrej Rublëv, in cui etica ed estetica si compenetrano. La specificità del mezzo cinema deve consistere in una vera e propria scultura del tempo (in un certo senso nella sua cattura fattografica all'interno dell'inquadratura), con tutte le implicazioni filosofiche che ne derivano.
+%
+% Si potrebbe dire che con l'avvio della campana, a sua volta metafora di un'icona, Andrej Rublëv arriva persino a simulare l'esperienza della rivelazione divina: è come se Tarkovskij proponesse, nel corso del film, una guida alla lettura delle immagini sacre poi mostrate a colori nella parte finale. Si pensi alla tensione temporale dell'inquadratura in cui il pesantissimo battaglio (in russo jazyk, 'lingua') prende ad oscillare dallo sfondo al primo piano: ricalca quasi il movimento suggerito dalla cosiddetta 'prospettiva rovesciata' delle icone teorizzata da Pavel Florenskij, in base alla quale le figure sembrano avanzare in direzione dell'osservatore. Mentre si attende la manifestazione della voce divina, immagine e suono sono ancora saldate nelle inquadrature dei lentissimi cigolii. Poi, quando la campana finalmente suona, Tarkovskij cela la fonte sonora, per spostarsi su Boriška e su Rublëv. Inevitabilmente lo stacco ha l'effetto di spezzare la prevedibilità non soltanto visiva ma anche temporale di una distanza progressivamente ridotta e di creare un nuovo senso di attesa. L'agognato e imprevedibile rintocco arriva a suggerire una trasformazione del chronos, il tempo quantitativo, in kairos, un tempo qualitativo. Per Rublëv è il tempo della rivelazione e dell'incontro con Dio.
+%
+% Osservando il tutto senza tener conto di suggestioni teoriche si pone una questione: non può essere una coincidenza il fatto che il frammento del film in cui si delinea una svolta spirituale sia anche quello che più si avvicina a uno schema da cinema classico. Tarkovskij scrive che il montaggio verticale è una dittatura, eppure, nella scena delle oscillazioni, in fondo il momento di massima rigidità ideologica, conserva una precisa saldatura tra suono e immagine e ricorre a una soluzione di montaggio, con una raffinata elaborazione in campo-controcampo. Magari era questo il segreto della campana.
+%
+%
+% \subsection*{appunti bibliografici}
+%
+% Deleuze, Gilles, Cinema 1: The Movement-ImageLondon: Continuum, 2005a.
+%
+% Deleuze, Gilles, Cinema 2: The Time ImageLondon: Continuum, 2005b.
+%
+% Tarkovsky, Andrei, Sculpting in Time: Reflections on the CinemaLondon: University of Texas Press, 1988.
 
 %-------------------------------------------------------------------------------
 \section*{botteghe di suono}
