--- a/src/v03/botteghe-di-suono/2025-09-10-botteghe-di-suono.tex
+++ b/src/v03/botteghe-di-suono/2025-09-10-botteghe-di-suono.tex
@@ -316,7 +316,8 @@ progetto bottega che mosso la sua intera esistenza è presente, oggi, in ogni
 traccia della sua eredità. È nostro compito vivere quei luoghi, comprendere le
 sue parole per curare la sua costruzione.
 
-
+\begin{quote}
+\verbatim
 Come onorare la musica\\
 ascoltarla senza agire\\
 senza sequenze di commenti\\
@@ -330,3 +331,4 @@ essere musica è fuga dal rumore\\
 è orecchio sinfonico\\
 verso la voce del silenzio\\
 verso la conta di quello che resta.
+\end{quote}
